ontol/ontol-compiler/test-cases/error/sequence/mix_abstract_object.on
def u ( // ERROR type not representable
    rel* 'a':
        integer // NOTE type of field is abstract
    rel* 0: text // ERROR invalid mix of relationship type for subject
)
